--- a/gb/25/1/30/n14426038.md
+++ b/gb/25/1/30/n14426038.md
@@ -16,7 +16,7 @@
 <p>苏菂在随后发布的另一个视频中介绍，“英伟达H200显卡是目前市场上卖的最贵的显卡，这是到货的200片其中的一台，我们早上刚刚拆开，一会给大家看一下拆箱的过程。”</p>
 <p>他说，“上一个视频（发布后）有好多朋友在评论区里说‘你这是违法的’，咱们这事确实违法，违了美国的法，特朗普（川普）会对这事很暴怒，对吧。（帮助）我搞这些显卡的哥们，搞了两年了，每一次量都特别大，他曾两次登上美国的黑名单。”</p>
 <p>上述提到的H200，是英伟达于2023年11月发布的新一代数据中心用GPU芯片。这款芯片采用先进的存储技术HBM3e，曾在多款流行的生成式AI大模型上展现出前所未有的性能。</p>
-<p><center><a title="近日，昆仑巢创始人苏菂公开炫耀英伟达显卡H100、H200芯片。这些GPU芯片是美国政府明令禁止出口到中国的违禁品。 ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://dqcg8pdekez1x.cloudfront.net/Y6y4tNzml"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hcu84ml12r7kCmx1sDcuiYCT13t1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>大纪元记者检索发现，上述两段视频是苏菂先后于2024年11月28日和29日发布在抖音个人账号上，在中国人工智能公司（AI）DeepSeek近日发布R1推理模型发酵后，上述视频受到海内外网友的关注。</p>
+<p><center><a title="近日，昆仑巢创始人苏菂公开炫耀英伟达显卡H100、H200芯片。这些GPU芯片是美国政府明令禁止出口到中国的违禁品。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d22qnxkzs9qeoh.cloudfront.net/A6l4tNzmy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hcu84ml12r7kCmx1sDcuiYCT13t1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>大纪元记者检索发现，上述两段视频是苏菂先后于2024年11月28日和29日发布在抖音个人账号上，在中国人工智能公司（AI）DeepSeek近日发布R1推理模型发酵后，上述视频受到海内外网友的关注。</p>
 <p>对于苏菂公开“炫耀”走私的英伟达显卡，有中国网友在微博评论说：“蠢不自知”“当小偷都当得理直气壮了”“总是拿自己的鸡贼当聪明”……</p>
 <p>此前苏菂曾受到央视等官媒多次报导，他的头衔包括车库咖啡创始人、You+公寓联合创始人、昆仑巢创始人。</p>
 <figure id="attachment_14426057" aria-describedby="caption-attachment-14426057" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14426057-3839598700694d3aae7b91226f9d7378-e1738282995957.jpg"><img decoding="async" class="size-full wp-image-14426057" src="https://i.epochtimes.com/assets/uploads/2025/01/id14426057-3839598700694d3aae7b91226f9d7378-e1738282995957.jpg" alt="" width="500" b="444" /></a><figcaption id="caption-attachment-14426057" class="wp-caption-text">（网页截图）</figcaption></figure>
@@ -31,35 +31,39 @@
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394374.md#1" target="_blank" rel="noopener">消息：美国要Nvidia查违禁芯片如何流入中国</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14417388.md#1" target="_blank" rel="noopener">TikTok禁令效应 字节跳动11款App在美遭下架</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415220.md#1" target="_blank" rel="noopener">美发布黑名单后 中国三科技巨头市值蒸发680亿</a> </span></span></span></span></h3>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14383152.md#1">美对华芯片制裁 140家企业完整名单一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384294.md#1">中共报复美国芯片新禁令 专家指适得其反</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385609.md#1">美议员：最新对华芯片管制“存在漏洞”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389987.md#1">华为芯片不敌五年前台积电 中共爱国牌不灵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416009.md#1">【未解之谜】皮行者牧场（一）：美国境内的时空门？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406705.md#1">【古道人生】继母诚心培育前妻所生的三个儿子功成名就</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420049.md#1">【新闻大破解】川普重整全球秩序？对中共施压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419888.md#1">【中国禁闻】川习通话 普习视讯 专家析大国博弈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420920.md#1">【神韵早期节目】飞雪迎春（2012年制作）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419471.md#1">政局敏感 传中国内部有人等两个时机举事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419043.md#1">中国面临长期通货紧缩 大跃进以来首次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419224.md#1">“三桶油”营收利润大跌 中国石化业遇拐点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418338.md#1">刀郎落榜多个音乐奖 被称演艺界“罗刹海市”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420134.md#1">赵薇主动公布离婚日期 已清空黄有龙公司股票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418418.md#1">真人《魔发奇缘》公主 弗萝伦丝普伊是热门人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419144.md#1">剧集《漂白》被指抄袭南都报导《漂白》各方回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420047.md#1">40岁大陆女歌手申烨猝逝 知情者曝死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418616.md#1">如何培养出高情商孩子？ 专家教你7招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411648.md#1">过年零食吃什么好？中医师推荐3类健康零食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419447.md#1">美国有个神秘湖泊 湖水每年会消失一季</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419078.md#1">中医美白三大关键！改善肤色提升明亮度</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416694.md#1">孤独增加癌病、失智风险 这样做消除孤独感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/30/n14426038.htm">陆企老板承认违规走私英伟达显卡 视频曝光</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/30/n14426038.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
